# Cortex

./: .env.example  .gitignore  BENCHMARK_REPORT.md  DEVELOPMENT.md  LICENSE  MELHORIAS_IMPLEMENTADAS.md  README.md  README.pt-br.md  RESUMO_EXECUTIVO.md  RESUMO_EXECUTIVO_V2.md  analyze_results.sh  docker-compose.yml  pyproject.toml  pytest.ini  refactor_memory_graph.py  run_lightweight_benchmark.py  setup-ide-links.sh  start_benchmark.sh  start_lightweight_benchmark.sh  start_ui.sh
.ai/: CONVENTIONS.md  INSTRUCTIONS.md
.ai/docs/: API.md  BENCHMARK_RESULTS.md  LOGGING.md  MCP.md  PROJECT-STATUS.md  api-contracts.md  architecture.md  cognitive-principles.md  database-schema.md  w5h-model.md
.ai/docs/architecture/: attention-mechanism.md  context-packing.md  improvements.md  sm2-adaptive.md
.ai/docs/business/: project-analysis.md  roadmap.md
.ai/docs/concepts/: cognitive-decay.md  consolidation.md  shared-memory.md
.ai/docs/getting-started/: quickstart.md  testing.md
.ai/docs/research/: benchmarks.md  generate_charts.py
.ai/rules/: architecture-patterns.md  code-style.md  testing.md
.cursor/rules/: rules.mdc
.github/: copilot-instructions.md
.github/instructions/: cortex.instructions.md
.github/workflows/: publish.yml
bench/: run_benchmark.py  run_benchmark_v5.py
bench/results/: benchmark_20260618_215453.json  v5_benchmark_20260615_233940.json  v5_benchmark_20260615_234002.json  v5_benchmark_20260615_234105.json
bench/scenarios/: customer_support.json  personal_assistant.json
benchmark/: README.md  __init__.py  ablation_runner.py  ablation_study.py  agents.py  analyze_comparison.py  analyze_graph.py  analyze_hubs.py  benchmark.py  collective_memory_benchmark.py  comparison_benchmark.py  consistency_metrics.py  conversation_generator.py  cortex_agent.py  cortex_agent_v2.py  full_comparison_benchmark.py  generate_paper_charts.py  lightweight_runner.py  locomo_benchmark.py  mem0_agent.py  paper_benchmark.py  professional_benchmark.py  rag_agent.py  real_comparison_benchmark.py  realistic_benchmark.py  run_benchmark.py  scientific_metrics.py  security_benchmark.py  semantic_validator.py  shared_memory_benchmark.py  test_recall_optimization.py  unified_benchmark.py  v2_comparison_benchmark.py  v2_validation.py  validate_benchmark.py  validation.py
benchmark/results/: ANALISE_BENCHMARK.md  ANALISE_BENCHMARK_20260109.md  ANALISE_BENCHMARK_20260109_v2.md  ANALISE_PREVIA_BENCHMARK.md  BENCHMARK_ANALYSIS_TEMPLATE.md  HIT_RATE_ANALYSIS.md  PRELIMINARY_REPORT.md  README.md  SCIENTIFIC_ANALYSIS.md  VISUAL_SUMMARY.md  full_comparison_20260107_024100.json  full_comparison_20260107_031925.json  full_comparison_20260107_194326.json  lightweight_20260106_193509.checkpoint.json  lightweight_20260107_005550.json
benchmark/scenarios/: __init__.py  shared_memory_scenarios.py
benchmark_results/: professional_report_20260114_184602.md  professional_report_20260114_192439.md
cortex_v5/: __init__.py  cortex.py
cortex_v5/core/: __init__.py  entity.py  graph.py  memory.py  relation.py
cortex_v5/integration/: __init__.py  hermes_bridge.py
cortex_v5/workers/: __init__.py  dream_agent.py
cortext/: __init__.py  cli.py  cortex.py
cortext/core/: entity.py  graph.py  memory.py  relation.py
cortext/hermes_plugin/: __init__.py  plugin.yaml
cortext/integration/: __init__.py  bridge.py  hermes_bridge.py
cortext/workers/: __init__.py  dream_agent.py
docker/: Dockerfile.api
docker/nginx/: nginx.conf
docs/: API.md  ARCHITECTURE.md  ATTENTION_MECHANISM_DESIGN.md  CME2_ANALYSIS.md  CORTEX_OVERVIEW.md  DETECTOR-COMPLIANCE.md  ENVIRONMENT.md  IDEA-EVENT-PARSER.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  MCP.md  MELHORIAS_IMPLEMENTADAS.md  PAPER_ACADEMIC.md  PAPER_FINAL.md  PAPER_TEMPLATE.md  PERFORMANCE_ANALYSIS.md  PLANO-V5.md  README.md  VISION.md  W5H_DESIGN.md
docs/architecture/: active-forgetting.md  api-reference.md  hierarchical-recall.md  overview.md  progressive-consolidation.md  storage-adapters.md  v2-overview.md
docs/business/: competitive-position.md  roadmap.md  use-cases.md  value-proposition.md
docs/concepts/: README.md  cognitive-decay.md  consolidation.md  memory-model.md  shared-memory.md
docs/getting-started/: integrations.md  quickstart.md
docs/research/: benchmarks.md  paper-gaps-analysis.md  paper-metrics.md  scientific-basis.md
experiments/: 01_test_decay.py  02_test_token_efficiency.py  03_test_memory_firewall.py  04_test_consolidation.py  05_test_conversation_quality.py  06_test_graphs_and_learning.py  07_test_improvements.py  PROPOSTAS_MELHORIA.md  README.md  RELATORIO_GRAFOS_APRENDIZADO.md  RESUMO_EXECUTIVO.md  VALIDATION_REPORT.txt  run_all.py
integrations/hermes/: README.md  install.sh
mcp/: README.md  pyproject.toml
mcp/cortex_mcp/: __init__.py  server.py
scripts/: format-file.sh  rename_to_cortext.sh  run-tests-if-changed.sh  validate-bash.sh
sdk/python/: README.md  cortex_memory.py  cortex_sdk.py  pyproject.toml
sdk/python/cortex_memory_sdk/: __init__.py  client.py  contracts.py  extractor.py  normalizer.py
sdk/python/integrations/: __init__.py  crewai.py  google_adk.py  langchain.py
sdk/python/tests/: test_sdk.py
src/cortex/: __init__.py  config.py
teste-llm/: EXAMPLE.md  README.md  __init__.py  agent.py  agent_with_mcp.py  agent_with_sdk.py  crew_agent.py  requirements-crew.txt  requirements.txt  test_integration_mcp.py  test_integration_sdk.py  test_memory_dynamics.py
teste-llm/data/: memory_graph.json
tests/: __init__.py  conftest.py  scenario_complex_conversations.py  test_cli.py  test_comparison.py  test_contradiction.py  test_core.py  test_cortex_v5.py  test_cortext.py  test_definitive.py  test_hermes_bridge.py  test_identity_kernel.py  test_logging_system.py  test_memory_dynamics.py  test_memory_service.py  test_memory_w5h.py  test_namespace_isolation.py
tests/core/: __init__.py  test_core.py  test_decay.py  test_graph_algorithms.py  test_identity.py  test_memory.py  test_memory_graph.py  test_noise_robustness.py  test_ranking.py  test_recall.py  test_text_extractor.py  test_validation.py
(+102 files in other folders)
