[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-memory"
version = "3.0.0"
description = "Cognitive memory system for LLM agents - Entities, Episodes, Relations"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jhony", email = "jhony@example.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=0.4.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
ui = [
    "streamlit>=1.40.0",
    "streamlit-agraph>=0.0.45",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
]
benchmark = [
    "litellm>=1.50.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.3.0",
]
all = [
    "fastmcp>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.40.0",
    "streamlit-agraph>=0.0.45",
    "pandas>=2.0.0",
    "litellm>=1.50.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "httpx>=0.28.0",
]

[project.scripts]
cortex-mcp = "cortex.mcp.server:main"
cortex-api = "cortex.api.app:main"
cortex-ui = "cortex.ui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
