[project]
name = "cortex-mcp"
version = "0.1.0"
description = "MCP Server para Cortex Memory - Memória cognitiva para agentes LLM"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cortex Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["mcp", "memory", "llm", "agent", "cortex", "claude", "anthropic"]

dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/cortex-memory/cortex"
Documentation = "https://cortex-memory.github.io/docs"
Repository = "https://github.com/cortex-memory/cortex"

[project.scripts]
cortex-mcp = "cortex_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cortex_mcp"]
